k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hackathon-starter-web
  namespace: hackathon-starter
spec:
  replicas: 2
  selector:
    matchLabels:
      app: hackathon-starter-web
  template:
    metadata:
      labels:
        app: hackathon-starter-web
    spec:
      containers:
      - name: web
        image: kaka2112/hackathon-starter-web:latest
        ports:
        - containerPort: 8080
